2012-11-27 arjenmarkus@users.sourceforge.net
   * src/reporting/m_logger.f90: use the new flush statement instead of closing/opening the log file
   * tests/reporting/test_m_logger.f90: add a test that aborts the program, so we can ensure the log
         file will be written completely to disk
   * src/datastructures/generic_stack.f90: module for implementing a stack - work in progress
   * src/datastructures/basic_buffer.f90: module for implementing a circular buffer - work in progress

2012-11-21 arjenmarkus@users.sourceforge.net
   * src/reporting/m_logger.f90: apply patch by Karin Nystrom (introducing Fortran 2008 feature NEWUNIT=)
   * tests/reporting/makefile: add rules for making three more test programs (only test_report still missing)
   * doc/reporting/m_logger.man: document the use of NEWUNIT=

2012-11-04 arjenmarkus@users.sourceforge.net
   * src/computing/libdate.f90: implemented routine scan_date
   * doc/computing/libdate.man: documentation of routine scan_date
   * tests/computing/test_libdate.f90: implemented tests for scan_date and corrected mistakes
   * src/strings/tokenize.f90: removed superfluous comment, now storing start of token (for tokenlist)
   * src/strings/tokenlist.f90: implemented a token list derived type - more convenient interface
   * doc/strings/tokenlist.man: documentation of the tokenlists module
   * tests/strings/makefile: first version of a makefile for the test programs in this subdirectory
   * src/streams/readchar.f90: basic module for reading a file character by character (to be used in more sophisticated modules)
   * tests/streams/test_readchar.f90: test program for the read_characters module
   * tests/streams/readchar.txt: test file for the read_characters module
   * tests/streams/makefile: first version of a makefile for the test programs in this subdirectory
   * doc/streams/readchar.man: documentation of the read_characters module

2012-11-03 arjenmarkus@users.sourceforge.net